--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -10,10 +10,18 @@ set -g pane-base-index 1
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
+set -g set-clipboard on          # use system clipboard
+set -g status-position bottom 
+setw -g mode-keys vi
+set-option -g allow-rename off
+setw -g automatic-rename off
+set-option -g allow-rename off
+
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank' # enable yank when in vi mode
 
 # Options to make tmux more pleasant
 set -g mouse on
@@ -34,7 +42,15 @@ set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -g @catppuccin_window_default_text " #{window_name}"
+# set -g @catppuccin_window_default_text " #{window_name}"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
+set -g @catppuccin_window_number_position "right"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
+
+
+# Key bindings
+bind r command-prompt "rename-window %%"
