--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -41,7 +41,6 @@ set -g status-left-length 100
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
 # set -g @catppuccin_window_default_text " #{window_name}"
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_text "#W"
@@ -54,3 +53,7 @@ run '~/.config/tmux/plugins/tpm/tpm'
 
 # Key bindings
 bind r command-prompt "rename-window %%"
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
