add key bindings for tmux

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -58,4 +58,5 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-bind-key d run-shell "tmux 'date; read'"
+bind g send-keys lazygit Enter
+bind e send-keys 'code .' Enter
